# youtube_transcriptor

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml  youtube.py
