[project]
name = "custompymcpserver"
version = "0.1.0"
description = "Building your own Custom MCP Servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "FastAPI",
    "youtube-transcript-api",
    "moviepy==1.0.3",
    "yt-dlp"
]

[project.urls]
repository = "https://github.com/yourusername/youtube-transcriptor-mcp"
